deploy/k8s-scram-256-webhook.yml
---
apiVersion: v1
kind: Service
metadata:
  name: $APP
  namespace: $NAMESPACE
  labels:
    app: $APP
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: $APP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP
  namespace: $NAMESPACE
  labels:
    app: $APP
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $APP
  template:
    metadata:
      name: $APP
      namespace: $NAMESPACE
      labels:
        app: $APP
    spec:
      containers:
        - name: mutator
          image: $IMAGE
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi
          volumeMounts:
            - name: ssl
              mountPath: "/home/ssl"
              readOnly: true
      volumes:
        - name: ssl
          secret:
            secretName: $APP-tls
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: $APP
  namespace: $NAMESPACE
  labels:
    app: $APP
webhooks:
  - name: $APP.default.svc.cluster.local
    clientConfig:
      caBundle: $CA_BUNDLE
      service:
        name: $APP
        namespace: $NAMESPACE
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["secrets"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
